Implement Mali Pixel protected memory allocation.
Bug: 194627754
Test: Verified that a GPU protected memory test can pass. It sometimes
 fails with a GPU fault.
Test: See details in testing done comment in
 https://partner-android-review.googlesource.com/2102797 .
Change-Id: I0723b94a68024c8977167a49b735d2ce1e3b11bc

--- a/mali_pixel/Kbuild
+++ b/mali_pixel/Kbuild
@@ -47,7 +47,10 @@ ifeq ($(CONFIG_MALI_PROTECTED_MEMORY_ALLOCATOR),m)
 endif
 
 # Use our defines when compiling, and include mali platform module headers
-ccflags-y += $(DEFINES) -I$(src)/../common/include
+ccflags-y += \
+    $(DEFINES) \
+    -I$(src)/../common/include \
+    -I$(srctree)/include/linux
 
 # Add kernel module target if any of our config options is enabled
 ifneq ($(mali_pixel-objs),)
