GPUCORE-32478: Add support for Host based control of SC power rails
This commit adds support in Kbase & FW for Host based control of the
shader core power rails.
The power rails will be turned off when the GPU idle notification
is received and will be turned on before FW resumes the execution
on cores.

After turning off the power rails, Kbase will wait for the same idle
hysteresis time before triggering the power down of GPU, where CSGs
will be suspended and MCU will be halted.

A build time config option is added to enable the workaround in
Kbase code.

The corresponding changes required in firmware to support this
feature will be enabled at runtime, through the config entry
present in the FW image header, before the intial boot of firmware.

2 power management callbacks need to be implemented in the platform
specific file to turn on/off the shader core power rails.

FW binary based on 2f830d9d8ad7ad9dd661a047fd4a6e5695d46da2 (internal)

Bug: 201222260
Bug: 207028973
Provenance: collaborate.code.arm.com/#/c/3759
Test: feature under disabled flag.
Test: boots to home with additional fixes.

Change-Id: I2274575cd9648daeaee4a49146cf534650349bf1

--- a/mali_kbase/Makefile
+++ b/mali_kbase/Makefile
@@ -140,6 +140,7 @@ ifeq ($(CONFIG_MALI_MIDGARD),m)
         CONFIG_MALI_ERROR_INJECT = n
         CONFIG_MALI_HW_ERRATA_1485982_NOT_AFFECTED = n
         CONFIG_MALI_HW_ERRATA_1485982_USE_CLOCK_ALTERNATIVE = n
+        CONFIG_MALI_HOST_CONTROLS_SC_RAILS = n
         CONFIG_MALI_PRFCNT_SET_SELECT_VIA_DEBUG_FS = n
         CONFIG_MALI_DEBUG = n
         CONFIG_MALI_MIDGARD_ENABLE_TRACE = n
@@ -200,6 +201,7 @@ CONFIGS := \
     CONFIG_MALI_ERROR_INJECT \
     CONFIG_MALI_HW_ERRATA_1485982_NOT_AFFECTED \
     CONFIG_MALI_HW_ERRATA_1485982_USE_CLOCK_ALTERNATIVE \
+    CONFIG_MALI_HOST_CONTROLS_SC_RAILS \
     CONFIG_MALI_PRFCNT_SET_PRIMARY \
     CONFIG_MALI_PRFCNT_SET_SECONDARY \
     CONFIG_MALI_PRFCNT_SET_TERTIARY \
