--- a/mali_kbase/Kconfig
+++ b/mali_kbase/Kconfig
@@ -363,6 +363,15 @@ config MALI_HW_ERRATA_1485982_USE_CLOCK_ALTERNATIVE
 	  tree using the property, opp-mali-errata-1485982. Otherwise the
 	  slowest clock will be selected.
 
+config MALI_HOST_CONTROLS_SC_RAILS
+	bool "Enable Host based control of the shader core power rails"
+	depends on MALI_CSF_SUPPORT
+	default n
+	help
+	  This option enables the Host based control of the power rails for
+	  shader cores. It is recommended to use PDCA (Power Domain Control
+	  Adapter) inside the GPU to handshake with SoC PMU to control the
+	  power of cores.
 endif
 
 config MALI_ARBITRATION
