--- a/mali_kbase/Makefile
+++ b/mali_kbase/Makefile
@@ -46,6 +46,7 @@ CONFIG_MALI_PIXEL_GPU_QOS ?= y
 CONFIG_MALI_PIXEL_GPU_BTS ?= y
 CONFIG_MALI_PIXEL_GPU_SECURE_RENDERING ?= y
 CONFIG_MALI_PIXEL_GPU_THERMAL ?= y
+CONFIG_MALI_HOST_CONTROLS_SC_RAILS ?= y
 
 #
 # Default configuration values
